{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 30,
  "lineage": "523973f4-9eba-4aac-73a7-98caccb6fca5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110751173750:internet-gateway/igw-0da7660b1e109f521",
            "id": "igw-0da7660b1e109f521",
            "owner_id": "110751173750",
            "tags": {
              "Name": "terraform-eks-igw"
            },
            "tags_all": {
              "Name": "terraform-eks-igw"
            },
            "vpc_id": "vpc-09956eab08a0ea79c"
          },
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110751173750:route-table/rtb-016e1e5bed1c24bb3",
            "id": "rtb-016e1e5bed1c24bb3",
            "owner_id": "110751173750",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da7660b1e109f521",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09956eab08a0ea79c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project03",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029eacb41e8d32eee",
            "route_table_id": "rtb-016e1e5bed1c24bb3",
            "subnet_id": "subnet-0bc761a66906b3e7c"
          },
          "dependencies": [
            "aws_internet_gateway.project03",
            "aws_route_table.project03",
            "aws_subnet.project03",
            "aws_vpc.project03",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3fbf1145e66924e",
            "route_table_id": "rtb-016e1e5bed1c24bb3",
            "subnet_id": "subnet-043a36ba2ed8f6fb1"
          },
          "dependencies": [
            "aws_internet_gateway.project03",
            "aws_route_table.project03",
            "aws_subnet.project03",
            "aws_vpc.project03",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110751173750:security-group/sg-045eb8d0d230392a0",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045eb8d0d230392a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "151.192.165.237/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "project03-eks-cluster-security-group",
            "name_prefix": "",
            "owner_id": "110751173750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks"
            },
            "tags_all": {
              "Name": "terraform-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-09956eab08a0ea79c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project03",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_node_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110751173750:security-group/sg-05516829f0c211512",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05516829f0c211512",
            "ingress": [],
            "name": "project03-eks-work-node-security-group",
            "name_prefix": "",
            "owner_id": "110751173750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-node-security-group"
            },
            "tags_all": {
              "Name": "eks-worker-node-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09956eab08a0ea79c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-node-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-438475496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-045eb8d0d230392a0",
            "security_group_rule_id": "sgr-086e24a5ef6330f8e",
            "self": false,
            "source_security_group_id": "sg-05516829f0c211512",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_security_group",
            "aws_security_group.eks_worker_node_security_group",
            "aws_vpc.project03",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-ingress-cluster-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster API server",
            "from_port": 443,
            "id": "sgrule-558637521",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05516829f0c211512",
            "security_group_rule_id": "sgr-068d18e51b7204652",
            "self": false,
            "source_security_group_id": "sg-045eb8d0d230392a0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_security_group",
            "aws_security_group.eks_worker_node_security_group",
            "aws_vpc.project03",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-ingress-cluster-others",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 1025,
            "id": "sgrule-2882147832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05516829f0c211512",
            "security_group_rule_id": "sgr-00120608179880083",
            "self": false,
            "source_security_group_id": "sg-045eb8d0d230392a0",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_security_group",
            "aws_security_group.eks_worker_node_security_group",
            "aws_vpc.project03",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-ingress-self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3220258503",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05516829f0c211512",
            "security_group_rule_id": "sgr-03632c56d5c060ae6",
            "self": false,
            "source_security_group_id": "sg-05516829f0c211512",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_worker_node_security_group",
            "aws_vpc.project03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110751173750:subnet/subnet-0bc761a66906b3e7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc761a66906b3e7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "110751173750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-subnet",
              "kubernetes.io/cluster/project03-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-subnet",
              "kubernetes.io/cluster/project03-eks": "shared"
            },
            "vpc_id": "vpc-09956eab08a0ea79c"
          },
          "dependencies": [
            "aws_vpc.project03",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110751173750:subnet/subnet-043a36ba2ed8f6fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043a36ba2ed8f6fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "110751173750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-subnet",
              "kubernetes.io/cluster/project03-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-subnet",
              "kubernetes.io/cluster/project03-eks": "shared"
            },
            "vpc_id": "vpc-09956eab08a0ea79c"
          },
          "dependencies": [
            "aws_vpc.project03",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:110751173750:vpc/vpc-09956eab08a0ea79c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c5c2be38ed8e9d9",
            "default_route_table_id": "rtb-04cb2e8ea57c8625f",
            "default_security_group_id": "sg-0ca2904827b3e3342",
            "dhcp_options_id": "dopt-0a9ae498714710a46",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09956eab08a0ea79c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cb2e8ea57c8625f",
            "owner_id": "110751173750",
            "tags": {
              "Name": "prj03_terraform-eks-vpc",
              "kubernetes.io/cluster/project03-eks": "shared"
            },
            "tags_all": {
              "Name": "prj03_terraform-eks-vpc",
              "kubernetes.io/cluster/project03-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}